# learning_claude_code

./: README.md  pyproject.toml
.github/workflows/: actions.yaml  hello_python.yaml
dice_average/: __init__.py  cli.py  config.py  display.py  error_handling.py  json_output.py  models.py  parser.py  roller.py  statistics.py
tests/: __init__.py  test_cli.py  test_config.py  test_models.py  test_parser.py  test_roller.py  test_statistics.py
